--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
                                         <p class="regular_price">
                                             Retail price:
                                             <s class="red_text">
-                                                KWD 349.9
+                                                USD 1199
                                             </s>
                                         </p>
                                         <p class="your_price">Your price: <span>KWD 0</span></p>
@@ -1109,7 +1109,7 @@
                                         <p class="regular_price">
                                             Retail price:
                                             <s class="red_text">
-                                                KWD 349.9
+                                                USDD 1199
                                             </s>
                                         </p>
                                         <p class="your_price">Your price: <span>KWD 0</span></p>
