--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@
                                                 USD 1199
                                             </s>
                                         </p>
-                                        <p class="your_price">Your price: <span>KWD 0</span></p>
+                                        <p class="your_price">Your price: <span>USD 0</span></p>
                                         <p class="remaining">
                                             <b>Left: <span>2</span></b>
                                         </p>
@@ -1112,7 +1112,7 @@
                                                 USDD 1199
                                             </s>
                                         </p>
-                                        <p class="your_price">Your price: <span>KWD 0</span></p>
+                                        <p class="your_price">Your price: <span>USD 0</span></p>
                                         <p class="remaining">
                                             <b>Left: <span>1</span></b>
                                         </p>
